# MAI-course-1

./: README.md  report for labs.tex
coursework/KP1/: KP1_Mezenin_106.docx
coursework/KP2/: KP2_Mezenin_106.docx
coursework/KP3/: KP3_Mezenin_106.docx  main.c
coursework/KP4/: KP4_Mezenin_106.docx  main.c
coursework/KP6/: KP6_Mezenin_106.docx  ma_struct.h  main.c  moscow_apartments.csv  to_bin.c
coursework/KP7/: main.c  svdbl.c  svdbl.h  svint.c  svint.h
coursework/KP8/: CMakeLists.txt  Makefile  list.c  main.c  svint.c  svint.h  user_interface.c  user_interface.h
coursework/KP9/: CMakeLists.txt  Makefile  item.c  item.h  main.c  sort_hoar.c  sort_hoar.h  user_interface.c  user_interface.h  vitem.c  vitem.h
labs/lab10/: lab_10.odg  lab_10_prot.txt
labs/lab11/: lab_11.odg  main.c
labs/lab12/: lab_12.odg  main.c
labs/lab13/: lab_13.odg  main.c
labs/lab14/: lab_14.odg  main.c
labs/lab15/: lab_15.odg  main.c
labs/lab2/: lab_2.odg  lab_2_prot.txt
labs/lab20/: lab20.txt  lab_20.odg
labs/lab21/: lab21.sh  lab_21.odg
labs/lab22/: lab_22.txt
labs/lab23/: CMakeLists.txt  Makefile  lab23  main.c  tenum.c  tenum.h  villages.c  villages.h
labs/lab24/: CMakeLists.txt  Makefile  building.c  building.h  calculation.c  calculation.h  error_struct.h  main.c  sdbl.c  sdbl.h  sorting_station.c  sorting_station.h  token_queue.c  token_queue.h  token_stack.c  token_stack.h  token_struct.c  token_struct.h  token_tree.c  token_tree.h  token_tree_stack.c  token_tree_stack.h  token_vector.c  token_vector.h  user_interface.c  user_interface.h
labs/lab26/: lab26  (+5 more)
(+76 files in other folders)
